🐳 chore(root): MANTENIMIENTO DE REPOSITORIO
combina la rama Develop con los cambios de t3-turbo hasta el commit : 86c5f8898ec67de0c1af6a893f64f1476fb40bb9
fix(deps): update dependency @t3-oss/env-nextjs to ^0.11.1 (#1173) - Sep 19, 2024

--- a/turbo/generators/templates/package.json.hbs
+++ b/turbo/generators/templates/package.json.hbs
@@ -1,5 +1,5 @@
 {
-  "name": "@dict/{{ name }}",
+  "name": "@dict/{{name}}",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -9,11 +9,11 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "clean": "rm -rf .turbo node_modules",
+    "clean": "git clean -xdf .cache .turbo dist node_modules",
     "dev": "tsc",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "devDependencies": {
     "@dict/eslint-config": "workspace:*",
